# coroamalib

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
include/coroama/: nullapi.h  pathlib.h  shorthands.h  strlib.h  types.h
include/coroama/dynamic/: dynidx.h  dynmem.h
include/coroama/ext/: cleanup.h  types.h  util.h
src/: nullapi.c
src/dynamic/: dynidx.c
tests/: CMakeLists.txt  gtest_main.cpp
tests/lib/: AllTests.cmake  DynamicIndex.cpp  Types.cpp
